Fix z-indexes

--- a/src/styles/partials/_footer.scss
+++ b/src/styles/partials/_footer.scss
@@ -6,7 +6,7 @@ footer {
   align-items: center;
   justify-content: center;
   position: fixed;
-  z-index: 2000;
+  z-index: 1400;
   bottom: 0;
   width: 100%;
   height: $footer-height;
