--- a/src/styles/partials/_header.scss
+++ b/src/styles/partials/_header.scss
@@ -2,7 +2,7 @@
 
 header {
   position: relative;
-  z-index: 2000;
+  z-index: 1400;
   height: $header-height;
   padding: 0 1em;
   color: $light-text-color;
