--- a/src/styles/partials/_map.scss
+++ b/src/styles/partials/_map.scss
@@ -77,6 +77,8 @@
 
 .infoCard {
   position: absolute;
+  top: 0;
+  left: 0;
   z-index: 1000;
   width: 90%;
   max-width: 480px;
